[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Options.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="Panel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -34.0
margin_right = 53.0
margin_bottom = 34.0

[node name="Resume" type="Button" parent="Buttons"]
margin_right = 106.0
margin_bottom = 20.0
text = "Resume Game"

[node name="Options" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 106.0
margin_bottom = 44.0
text = "Options"

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 106.0
margin_bottom = 68.0
text = "Quit"

[node name="Options" parent="." instance=ExtResource( 1 )]

[node name="QuitConfirmation" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -20.0
margin_right = 97.0
margin_bottom = 20.0

[node name="ConfirmationLabel" type="Label" parent="QuitConfirmation"]
margin_right = 194.0
margin_bottom = 14.0
text = "Are you sure you want to quit?"

[node name="HBoxContainer" type="HBoxContainer" parent="QuitConfirmation"]
margin_top = 18.0
margin_right = 194.0
margin_bottom = 38.0

[node name="ConfirmQuit" type="Button" parent="QuitConfirmation/HBoxContainer"]
margin_right = 95.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Quit"

[node name="Cancel" type="Button" parent="QuitConfirmation/HBoxContainer"]
margin_left = 99.0
margin_right = 194.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_Quit_pressed"]
[connection signal="options_saved" from="Options" to="." method="_on_Options_options_saved"]
[connection signal="pressed" from="QuitConfirmation/HBoxContainer/ConfirmQuit" to="." method="_on_ConfirmQuit_pressed"]
[connection signal="pressed" from="QuitConfirmation/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
